# mcp-clingo

./: LICENSE  README.md  pyproject.toml  server.py
